--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-actuator-docs')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compileOnly 'org.projectlombok:lombok:1.16.20'
+	//compile('org.projectlombok:lombok')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('mysql:mysql-connector-java')
+	//testCompile('org.springframework.boot:spring-boot-starter-test')
 }
