--- a/build.gradle
+++ b/build.gradle
@@ -35,4 +35,8 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
     //providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
+
+//	//Swagger
+//	compile('io.springfox:springfox-swagger2:2.7.0')
+//	compile('io.springfox:springfox-swagger-ui:2.7.0')
 }
