--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('mysql:mysql-connector-java')
 	//compile('org.postgresql:postgresql')
+	compile('org.springframework.boot:spring-boot-starter-mail:2.0.2.RELEASE')
+
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
