--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.mail.username=kodilla0course@gmail.com
 spring.mail.password=EpGjEmNw321
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#ADMINISTRATION
+admin.mail=kodilla0course@gmail.com
