--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,12 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('org.springframework.boot:spring-boot-starter-mail')
+	compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('mysql:mysql-connector-java')
 	//compile('org.postgresql:postgresql')
 	compile('org.springframework.boot:spring-boot-starter-mail:2.0.2.RELEASE')
-
+	compile('com.google.code.gson:gson:2.8.2')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
