--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #ADMINISTRATION
+admin.name=Magda
 admin.mail=kodilla0course@gmail.com
 
 endpoints.metrics.enabled=true
