--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 #DATABASE CONFIGURATION
 spring.jpa.hibernate.ddl-auto=update
 
-#spring.jpa.database=postgresql
-#spring.datasource.url=${JDBC_DATABASE_URL}
-#spring.datasource.username=${JDBC_DATABASE_USERNAME}
-#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.database=postgresql
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
-spring.jpa.database=mysql
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=false
-spring.datasource.username=kodilla
-spring.datasource.password=54871209
+#spring.jpa.database=mysql
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=false
+#spring.datasource.username=kodilla
+#spring.datasource.password=54871209
 
 trello.api.endpoint.prod=https://trello.com/1
 trello.app.key=a9daa792073c49c86bf0ee89bd2472a2
